2005-10-26  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/road.c:
	* src/util.c:
	* data/road-suffix-list.txt: Moved list of road suffixes to data file.

2005-10-25  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map.c: Switch from gfreelist to g_new and g_free for the list of selected POI (currently not really used).
	* src/gfreelist.h:
	* src/gfreelist.c: Removed.

2005-10-20  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* roadster.spec: Added RPM .spec file contributed by Ofer Achler.
	* src/search_coordinate.c: Added file to allow pasting/typing text containing lat and lon coordinates into search box.  (Currently not implemented!)
	* src/search.c: Init and use search_coordinate stuff.
	* src/mainwindow.c: Disable hittesting related to tooltip for preview release.  Make GPS checkboxes insensitive when 'show position on map' is off.
	* src/db.c: Add db_city_get_name(id)
	* src/map_draw_cairo.c: Add miter limit.
	* src/mapinfowindow.c: Improve a lot.  May not make it into the preview release though.

2005-10-18  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/mainwindow.c:
	* src/map.c:
	* src/map_draw_cairo.c: Add Debug menu toggle for GDK/Cairo.
	* src/map_draw_gdk.c: Remove dead code.

2005-10-17  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* configure.ac: Added -Wall compiler option (show all warnings).
	* src/map_draw_cairo.c: The return of Cairo!  Now drawing from tile data and using bounding box overlap tests.
	* src/map_hittest.c: The return of hittesting!
	* src/db.c: Remove dead code.
	* src/downloadmanager.c: Properly return a value from a GnomeVFS callback.
	* src/import_tiger.c: Switch from GPtrArrays to GArrays for points.
	* src/main.c: Properly include libintl.h
	* src/map.c: Cleanups.  Dead code removal.
	* src/map_draw_gdk.c: Add random road segment color option for debugging.
	* src/map_math.c: Added polygon clipping and line stitching.
	* src/map_tilemanager.c: Do basic line stitching at load time.